# SDL2_CMake_Example

./: CMakeLists.txt  README.md  build.bat  main.cpp
include/: Engine.h
src/: Engine.cpp  main.cpp
